--- a/IH_calculation.ipynb
+++ b/IH_calculation.ipynb
@@ -146,7 +146,7 @@
     "    return(IHval)\n",
     "\n",
     "\n",
-    "## opening the xcel-file that contains the names of all abf files (row 5) and the whether or not this file contains analyzable IH currents (row 22) \n",
+    "## opening the xcel-file that contains the names of all abf files (row 5), if the quality of the recording was good enough to be included in the analysis (row 18), and whether or not this file contains analyzable IH currents (row 22) \n",
     "excel_filename=cwd+'/cell_names.xlsx'\n",
     "wb = ox.load_workbook(excel_filename, data_only=True)\n",
     "sheet = wb.get_sheet_by_name('Sheet1')\n",
