--- a/IH_calculation.ipynb
+++ b/IH_calculation.ipynb
@@ -158,10 +158,12 @@
     "## creating a pandas DataFrame that will contain the clalculations made in the IH_calculation function, seperated in columns for each analyzed cell\n",
     "IH_df=pd.DataFrame([['-200pA:'],['-150pA:'],['-100pA:'],['-50pA:'],['0pA:']])\n",
     "cell_list=[]\n",
+    "## for loop to create a list that only contains filenames from analyzable recordings\n",
     "for i in range(len(IH_check[0])):\n",
     "    if ((IH_check[0][i]==1) & (cell_decision[0][i]==1)):\n",
     "        cell_list.append(files[0][i])\n",
     "\n",
+    "## loop that calls the IH_calculation function on each filename from the list created in the loop before\n",
     "for ii in range(len(cell_list)):\n",
     "    IHval=IH_calculation(cwd+'/'+cell_list[ii]+'.abf')\n",
     "    IH_df.insert(loc=ii+1, column=cell_list[ii], value=IHval)\n",
